--- a/BookStore/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/BookStore/Views/Shared/_Layout.cshtml
@@ -21,7 +21,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>                   
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>   
+                    <li>@Html.ActionLink("Book", "Index", "Books")</li>
+                                    
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
