--- a/BookStore/BookStore/Views/Books/Index.cshtml
+++ b/BookStore/BookStore/Views/Books/Index.cshtml
@@ -43,10 +43,9 @@
            @if (User.Identity.IsAuthenticated)
            {
             @Html.ActionLink("Edit |", "Edit", new { id = item.BookID })
-            @Html.ActionLink(" Details |", "Details", new { id = item.BookID }) 
-            @Html.ActionLink(" Delete", "Delete", new { id = item.BookID })
+            @Html.ActionLink(" Delete |", "Delete", new { id = item.BookID })
            }
-           
+            @Html.ActionLink(" Details", "Details", new { id = item.BookID })           
         </td>
     </tr>
 }
