--- a/BookStore/BookStore/Views/Books/Delete.cshtml
+++ b/BookStore/BookStore/Views/Books/Delete.cshtml
@@ -44,7 +44,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PagesCount)
+            @*@Html.DisplayNameFor(model => model.PagesCount)*@
+            Pages Count
         </dt>
 
         <dd>
@@ -53,7 +54,8 @@
 
        
         <dt>
-            @Html.DisplayNameFor(model => model.Author.AuthorName)
+            @*@Html.DisplayNameFor(model => model.Author.AuthorName)*@
+            Author Name
         </dt>
 
         <dd>
@@ -61,7 +63,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Country.CountryName)
+            @*@Html.DisplayNameFor(model => model.Country.CountryName)*@
+            Country Name
         </dt>
 
         <dd>
