--- a/BookStore/BookStore/Views/Books/Details.cshtml
+++ b/BookStore/BookStore/Views/Books/Details.cshtml
@@ -9,13 +9,12 @@
 <div>
     <h4>Book</h4>
     <hr />
-    <dl class="dl-horizontal">
-@*+++++++++ nenc anel vor anunnery arandzin linen*@
-        <dt>
-            @Html.DisplayNameFor(model => model.Picture)
-        </dt>
+    <dl class="dl-horizontal">                
         <dd>
+        @if (Model.Picture != null)
+        {
             <img src="data:image/png;base64,@Convert.ToBase64String(Model.Picture)" , style="width:20%;" />
+        }
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Title)
