--- a/BookStore/BookStore/Views/Books/Edit.cshtml
+++ b/BookStore/BookStore/Views/Books/Edit.cshtml
@@ -68,7 +68,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Picture, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="file" id="image1" name="image1" />
+                <form action="demo_form.asp">
+                    <input type="file" id="image1" name="image1" accept="image/*">
+                </form>
             </div>
         </div>
 
