--- a/BookStore/BookStore/Content/Site.css
+++ b/BookStore/BookStore/Content/Site.css
@@ -1,10 +1,17 @@
 ﻿body {
+    background-image:url(img/background.jpg);
+    background-position:center;
+    background-attachment: fixed;
+    background-repeat:no-repeat;    
+    background-size: cover;
     padding-top: 50px;
     padding-bottom: 20px;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
+    background-color: rgba(0,0,20,0.8);
+    color: wheat;
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -45,4 +52,3 @@ textarea {
  border:solid 2px red;
  font-size:110%;
 }
-
