--- a/BookStore/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/BookStore/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
 
     <table class="table">
 
-        <tr>
+        <tr>           
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
@@ -34,17 +34,17 @@
         {            
         <tr ng-repeat="b in BooksList | filter:search" @*ng-repeat="book in bookk | filter:searchText"*@>      
          <td>
-            @if (item.Picture != null)
+            @*@if (item.Picture != null)
             {
                 <img src="data:image/png;base64,@Convert.ToBase64String(item.Picture)" , style="width:20%;" class="img-thumbnail" />
-            }
+            }*@
          </td>
             <td>
                 {{b.Title}}
             </td>
-            <td>
+            <td style="color:lawngreen;">
                 @*harcnel es pahy chishta te che*@
-                {{b.Price + b.Tel_Code}}
+                {{b.Price + b.Tel_Code}} $
             </td>
         
             <td>
