Add Author Controller For author add Edit Create Delete Detaiils In Book Index Changed Author name to Full Name and add Authoor Link to Author ID details ))

--- a/BookStore/BookStore/Content/bootstrap.css
+++ b/BookStore/BookStore/Content/bootstrap.css
@@ -1460,9 +1460,13 @@ dd {
     text-align: right;
     text-overflow: ellipsis;
     white-space: nowrap;
+    font-size:160%;
+
   }
   .dl-horizontal dd {
     margin-left: 180px;
+    font-size:160%;
+
   }
 }
 abbr[title],
