--- a/BookStore/BookStore/Views/Books/Delete.cshtml
+++ b/BookStore/BookStore/Views/Books/Delete.cshtml
@@ -13,7 +13,9 @@
         @if (Model.Picture != null)
         {
         <dd>          
-            <img src="data:image/png;base64,@Convert.ToBase64String(Model.Picture)" , style="width:20%;" />
+            @*<img src="data:image/png;base64,@Convert.ToBase64String(Model.Picture)" , style="width:20%;" />*@
+            <img src="~/Picture/@Model.Picture" style="width:20%;" />
+
         </dd>
         }
         <br/>
