--- a/BookStore/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/BookStore/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home Search", "Index", "Home")</li>   
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>   
                     <li>@Html.ActionLink("Book", "Index", "Books")</li>     
                     @if (User.Identity.IsAuthenticated)
                     {
@@ -39,7 +39,7 @@
             
         </footer>
     </div>
-
+    
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
