--- a/BookStore/BookStore/Views/Books/Index.cshtml
+++ b/BookStore/BookStore/Views/Books/Index.cshtml
@@ -13,7 +13,7 @@
         <tr>
             <td>
                 Search
-                <input type="text" ng-model="search[searchBy]" />
+                <input type="text" ng-model="search[searchBy]"  class="srch" value="Book Name..." />
             </td>
             @*<td>
                 <select ng-model="searchBy">
