--- a/BookStore/BookStore/Content/Site.css
+++ b/BookStore/BookStore/Content/Site.css
@@ -79,7 +79,7 @@ textarea {
 }
 
 .srch:hover {
-    border: 2px solid #404259;
+    border: 2px solid #9C2D2D;
 }
 .srch{
     outline: none;
@@ -90,4 +90,5 @@ textarea {
     width: 100%;
     opacity: 0.5;
     padding-left: 7px;
+
 }
