--- a/BookStore/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/BookStore/Views/Shared/_Layout.cshtml
@@ -22,12 +22,13 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>   
-                    <li>@Html.ActionLink("Book", "Index", "Books")</li>     
+                    <li target="_blank">@Html.ActionLink("Book", "Index", "Books")</li>     
                     @if (User.Identity.IsAuthenticated)
                     {
                     <li>@Html.ActionLink("Author", "Index", "Authors")</li>
                     }                               
                 </ul>
+
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
@@ -36,7 +37,7 @@
         @RenderBody()
         
         <footer>
-            
+
         </footer>
     </div>
     
