--- a/BookStore/BookStore/Views/Books/Edit.cshtml
+++ b/BookStore/BookStore/Views/Books/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Edit";
 }
 
-<h2 style="float: left;">Edit</h2>
+<h2>Edit</h2>
 
-<div class="container" style="display: block;width: 100px;margin-top: 15px;">
+@*<div class="container" style="display: block;width: 100px;margin-top: 15px;">
 
     <!-- Trigger the modal with a button -->
     <button type="button" style="background-color:rgb(26, 26, 26);" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
@@ -79,7 +79,7 @@
         </div>
     </div>
 
-</div>
+</div>*@
 
 @using (Html.BeginForm("Edit", "Books", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
