--- a/BookStore/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/BookStore/Views/Home/Index.cshtml
@@ -58,3 +58,7 @@
     </a>
 </div>
 
+<br />
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1281.4661045162152!2d44.52318780991679!3d40.18999089521615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x406abcdfa5b57823%3A0xd15e91b880cce349!2sNational+Library+of+Armenia!5e0!3m2!1sen!2s!4v1474893275129" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+<iframe width="100%" height="200" style="opacity:0.4;" src="https://www.youtube.com/embed/KQX_HncvD2Y?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
