--- a/BookStore/BookStore/Views/Books/Create.cshtml
+++ b/BookStore/BookStore/Views/Books/Create.cshtml
@@ -132,7 +132,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", @rows = "5", @id = "comment" } })
+                @Html.TextAreaFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", @rows = "5", @id = "comment" } })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
